--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.pavlovmedia.oss.osgi</groupId>
     <artifactId>gelf</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>impl</artifactId>
@@ -30,7 +30,7 @@
     <dependency>
       <groupId>com.pavlovmedia.oss.osgi</groupId>
       <artifactId>lib</artifactId>
-      <version>1.1.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.felix</groupId>
