--- a/mega/pom.xml
+++ b/mega/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.pavlovmedia.oss.osgi</groupId>
     <artifactId>gelf</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>mega</artifactId>
