--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.pavlovmedia.oss.osgi</groupId>
   <artifactId>gelf</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <name>GELF Logging target</name>
@@ -33,6 +33,14 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
+
+  <distributionManagement>
+    <repository>
+      <id>bintray-shawn-pavlov-media-oss-osgi-gelf</id>
+      <name>shawn-pavlov-media-oss-osgi-gelf</name>
+      <url>https://api.bintray.com/maven/shawn/pavlov-media-oss/osgi-gelf</url>
+    </repository>
+  </distributionManagement>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
