--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -4,12 +4,12 @@
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.pavlovmedia.oss.osgi</groupId>
-    <artifactId>gelf</artifactId>
+    <groupId>com.pavlovmedia.oss.osgi.gelf</groupId>
+    <artifactId>com.pavlovmedia.oss.osgi.gelf</artifactId>
     <version>1.1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>impl</artifactId>
+  <artifactId>com.pavlovmedia.oss.osgi.gelf.impl</artifactId>
 
   <name>GELF Logging target implementation</name>
   <description>Implementation bundle</description>
@@ -28,8 +28,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.pavlovmedia.oss.osgi</groupId>
-      <artifactId>lib</artifactId>
+      <groupId>com.pavlovmedia.oss.osgi.gelf</groupId>
+      <artifactId>com.pavlovmedia.oss.osgi.gelf.lib</artifactId>
       <version>1.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
