--- a/mega/pom.xml
+++ b/mega/pom.xml
@@ -4,12 +4,12 @@
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.pavlovmedia.oss.osgi</groupId>
-    <artifactId>gelf</artifactId>
+    <groupId>com.pavlovmedia.oss.osgi.gelf</groupId>
+    <artifactId>com.pavlovmedia.oss.osgi.gelf</artifactId>
     <version>1.1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>mega</artifactId>
+  <artifactId>com.pavlovmedia.oss.osgi.gelf.mega</artifactId>
 
   <name>GELF Logging Mega bundle</name>
   <description>Mega bundle that contains the library and service for
