--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -1,12 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.pavlovmedia.oss.osgi.gelf</groupId>
     <artifactId>com.pavlovmedia.oss.osgi.gelf</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
   </parent>
 
   <artifactId>com.pavlovmedia.oss.osgi.gelf.impl</artifactId>
@@ -30,7 +28,7 @@
     <dependency>
       <groupId>com.pavlovmedia.oss.osgi.gelf</groupId>
       <artifactId>com.pavlovmedia.oss.osgi.gelf.lib</artifactId>
-      <version>1.0.0</version>
+      <version>1.0.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.felix</groupId>
