--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.pavlovmedia.oss.osgi.gelf</groupId>
   <artifactId>com.pavlovmedia.oss.osgi.gelf</artifactId>
-  <version>1.0.2</version>
+  <version>1.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>GELF Logging target</name>
