--- a/mega/pom.xml
+++ b/mega/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.pavlovmedia.oss.osgi.gelf</groupId>
     <artifactId>com.pavlovmedia.oss.osgi.gelf</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
 
   <artifactId>com.pavlovmedia.oss.osgi.gelf.mega</artifactId>
